--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -19,17 +19,35 @@ end
 Vagrant.configure("2") do |config|
   config.vm.box = "bento/ubuntu-20.04"
 
-  config.vm.define "node" do |node|
+  config.vm.define "worker" do |node|
 
-    node.vm.hostname = "node"
+    node.vm.hostname = "worker"
     
     node.vm.network "public_network", ip:"192.168.15.196",  bridge: "wlp58s0"
     node.vm.network "private_network", ip: "192.168.56.45"
 
     node.vm.provider "virtualbox" do |vb|
-      vb.memory = 2048
+      vb.memory = 1024
       vb.cpus = 2
-      vb.name = "node"
+      vb.name = "worker"
+    end
+end
+end
+
+Vagrant.configure("2") do |config|
+  config.vm.box = "bento/ubuntu-20.04"
+
+  config.vm.define "worker2" do |node|
+
+    node.vm.hostname = "worker2"
+    
+    node.vm.network "public_network", ip:"192.168.15.197",  bridge: "wlp58s0"
+    node.vm.network "private_network", ip: "192.168.56.46"
+
+    node.vm.provider "virtualbox" do |vb|
+      vb.memory = 1024
+      vb.cpus = 2
+      vb.name = "worker2"
     end
 end
 end
@@ -41,31 +59,13 @@ Vagrant.configure("2") do |config|
 
     loadbalancer.vm.hostname = "loadbalancer"
     
-    loadbalancer.vm.network "public_network", ip:"192.168.15.197",  bridge: "wlp58s0"
-    loadbalancer.vm.network "private_network", ip: "192.168.56.46"
+    loadbalancer.vm.network "public_network", ip:"192.168.15.198",  bridge: "wlp58s0"
+    loadbalancer.vm.network "private_network", ip: "192.168.56.47"
 
     loadbalancer.vm.provider "virtualbox" do |vb|
       vb.memory = 2048
       vb.cpus = 2
       vb.name = "loadbalancer"
-    end
-end
-end
-
-Vagrant.configure("2") do |config|
-  config.vm.box = "bento/ubuntu-20.04"
-
-  config.vm.define "ansible" do |ansible|
-
-    ansible.vm.hostname = "ansible"
-    
-    ansible.vm.network "public_network", ip:"192.168.15.198",  bridge: "wlp58s0"
-    ansible.vm.network "private_network", ip: "192.168.56.47"
-
-    ansible.vm.provider "virtualbox" do |vb|
-      vb.memory = 2048
-      vb.cpus = 2
-      vb.name = "ansible"
     end
 end
 end
