--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -19,9 +19,9 @@ end
 Vagrant.configure("2") do |config|
   config.vm.box = "bento/ubuntu-20.04"
 
-  config.vm.define "worker" do |node|
+  config.vm.define "worker1" do |node|
 
-    node.vm.hostname = "worker"
+    node.vm.hostname = "worker1"
     
     node.vm.network "public_network", ip:"192.168.15.196",  bridge: "wlp58s0"
     node.vm.network "private_network", ip: "192.168.56.45"
@@ -29,7 +29,7 @@ Vagrant.configure("2") do |config|
     node.vm.provider "virtualbox" do |vb|
       vb.memory = 1024
       vb.cpus = 2
-      vb.name = "worker"
+      vb.name = "worker1"
     end
 end
 end
